--- a/index.html
+++ b/index.html
@@ -1,14 +1,49 @@
 <!DOCTYPE html>
 <html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netmentor</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white position-fixed w-100">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="./img/mini-logo.svg" />
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBarMenu" aria-controls="navBarMenu" aria-expanded="false" aria-label="Toggle navigation">
+            <span><img src="./img/icon-menu.svg"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-center " id="navBarMenu">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Kezdőlap</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Rólunk</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Dokumentáció</a>
+                </li>
+            </ul>
+        </div>
+      </div>
+    </nav>
+
+    <header class="container-fluid">
+        <div class="row justify-content-center position-relative top-50 start-50 translate-middle">
+            <div class="col col-md-8 d-md-flex text-center">
+                <img src="./img/logo.svg">
+                <h1 class="position-relative top-50 fw-bold">Netmentor</h1>
+            </div>
+        </div>
+    </header>
+
     <script src="./js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
