--- a/index.html
+++ b/index.html
@@ -36,13 +36,31 @@
     </nav>
 
     <header class="container-fluid">
-        <div class="row justify-content-center position-relative top-50 start-50 translate-middle">
-            <div class="col col-md-8 d-md-flex text-center">
-                <img src="./img/logo.svg">
-                <h1 class="position-relative top-50 fw-bold">Netmentor</h1>
+        <div class="row position-absolute top-50 start-50 translate-middle">
+            <div class="w-100 d-block d-lg-flex justify-content-center align-items-center text-center">
+                <h1 class="p-5 fw-bold">Netmentor</h1>
+                <img class="w-75" src="./img/logo.svg">
             </div>
         </div>
     </header>
+
+    <section class="main">
+        <img src="./img/test.jpg">
+        <div class="container-fluid h-100 d-grid">
+            <div class="row justify-content-center">
+                <div class="col-11 col-md-5 col-lg-3 border border-3 border-white text-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">Online zaklatás jellemzői</a></div>
+                <div class="col-11 col-md-6 col-lg-8 border border-3 border-white text-white text-center mt-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">Az online zaklatás szereplői</a></div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-11 col-md-6 col-lg-7 border border-3 border-white text-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">Az online zaklatás lelki következményei</a></div>
+                <div class="col-11 col-md-5 col-lg-4 border border-3 border-white text-white text-center mt-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">Kérnek-e az áldozatok segítséget?</a></div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-11 col-md-5 col-lg-5 border border-3 border-white text-white text-center mt-3 mb-md-3 me-md-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">A zaklatás elkerülése</a></div>
+                <div class="col-11 col-md-6 col-lg-6 border border-3 border-white text-white text-center mt-3 mb-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">Mit tehet a médiamenentor?</a></div>
+            </div>
+        </div>
+    </section>
 
     <script src="./js/bootstrap.min.js"></script>
   </body>
