--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="#">Rólunk</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Dokumentáció</a>
+                    <a class="nav-link" href="./documentation.html">Dokumentáció</a>
                 </li>
             </ul>
         </div>
@@ -38,7 +38,10 @@
     <header class="container-fluid">
         <div class="row position-absolute top-50 start-50 translate-middle">
             <div class="w-100 d-block d-lg-flex justify-content-center align-items-center text-center">
-                <h1 class="p-5 fw-bold">Netmentor</h1>
+                <div class="p-5 text-end">
+                    <h1 class="fw-bold text-uppercase">Netmentor</h1>
+                    <span class="fw-normal text-secondary text-uppercase fs-5">Kezdőlap</span>
+                </div>
                 <img class="w-75" src="./img/logo.svg">
             </div>
         </div>
@@ -62,6 +65,7 @@
         </div>
     </section>
 
+    <!-- scriptek JS -->
     <script src="./js/bootstrap.min.js"></script>
   </body>
 </html>
