home page is ready just make responsive

--- a/documentation.html
+++ b/documentation.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netmentor</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white position-fixed w-100">
@@ -33,6 +34,92 @@
           </div>
         </div>
       </nav>
+
+      <header class="container-fluid">
+        <div class="row position-absolute top-50 start-50 translate-middle">
+            <div class="
+            w-100
+            d-block d-lg-flex
+            justify-content-center
+            align-items-center
+            text-center
+          ">
+                <div class="p-5 text-end">
+                    <h1 class="fw-bold text-uppercase">Netmentor</h1>
+                    <span class="fw-normal text-secondary text-uppercase fs-5">Dokumentáció</span>
+                </div>
+                <img class="w-75" src="./img/logo.svg" />
+            </div>
+        </div>
+    </header>
+
+    <section class="container-fluid">
+        <h2 class="fs-5" id="online_zaklatas_jellemzoi">Online zaklatás jellemzői</h2>
+        <hr>
+        <p>
+            Az online zaklatás vagy cyberbullying a zaklatás elektronikus formája: egy másik személy
+            ellen megnyilvánuló, nyílt, szándékos agresszív online cselekmény. Ide soroljuk
+            a különböző digitális eszközökkel - pl. mobilon - elkövetett zaklatást.
+        </p>
+
+        <div class="row">
+            <div class="col">
+                <h3 class="fs-6">A láthatatlanság illúziója</h3>
+                <p>
+                    A zaklatás és az online zaklatás legfőbb különbsége az, hogy az online térben az az illúziónk
+                    van, hogy anonimek és láthatatlanok vagyunk. Anonim módon, azaz arc és név nélkül
+                    lehetünk jelen, ezáltal a személyes én-érzetünk csökken: „bárkik lehetünk és bármit
+                    mondhatunk, úgysem fog kiderülni, illetve úgysem lesz semmi következménye". Ezért az online térben hajlamosabbak vagyunk olyan dolgokat is megtenni, mondani, illetve olyan
+                    szavakat használni, amiket élő kommunikációban nem mernénk megtenni. Viselkedésünk
+                    könnyen gátlástalanná válhat. Ezzel szemben a valóság, minden akciónk,
+                    gombnyomásunk utánkövethető, az IP címünk kikereshető. A zaklatásnak egyes esetei
+                    akár jogi felelősségrevonást is eredményezhetnek.
+                </p>
+            </div>
+
+            <div class="col">
+                <h3 class="fs-6">A metakommunikáció hiánya</h3>
+                <p>
+                    Az online kommunikációban nehezíti a megértést, hogy hiányoznak a kommunikációt
+                    kísérő érzelmek jelzései, nem látjuk a másik arcát, gesztusait, nem érzékeljük
+                    hanghordozását. Mindez félreértéshez vezethet, vicc helyett sértést, segítés helyett
+                    esetleg kioktatást érzünk.
+                </p>    
+            </div>
+
+            <div class="col">
+                <h3 class="fs-6"> Nem látjuk tetteink következményét</h3>
+                <p>
+                    Online környezetben nem érzékeljük, nem látjuk, milyen hatással volt viselkedésünk
+                    a másikra, milyen sérelmet, kárt okoztunk neki. Ez szintén sokkal gátlástalanabbá teszi
+                    az elkövetőt, hiszen nem kap visszajelzést arról, hogy milyen hatása van a szavainak.
+                </p>
+            </div>
+
+        </div>
+
+        <h3 class="fs-6">Nyilvánosság és gyors terjedés</h3>
+            <p>
+                Míg az offline zaklatás gyakran titokban, kétszemélyes helyzetben zajlik, az online zaklatás
+                egyik legnagyobb veszélye, hogy egy nyilvános lejárató komment vagy egy megszégyenító
+                tartalom (előnytelen fotó, vagy meztelen kép) nyilvánosságra hozatala sokkal nagyobb
+                nyilvánosság előtt zajlik. A terjesztés azonnali és szinte végtelen számú lehet. Ezáltal
+                az áldozat ismétlődően és hosszú időn keresztül szembesül a megszégyenítő tartalommal.
+            </p>
+
+            <h3 class="fs-6">A kontroll elvesztése</h3>
+            Egy nyilvánosságra hozott megszégyenítő tartalom sorsát nagyon nehéz befolyásolni.
+            Egy meggondolatlan, hirtelen felindulásból vagy visszavágásból megosztott tartalmat nem
+            tud visszavonni az elkövető sem. Egy ilyen poszt olyan lavinát tud elindítani, amire sokszor
+            
+            maga a posztoló sem számított.
+            Az internet mindig él, nem lehet kikapcsolni, az áldozat akárhányszor felmegy a netre,
+            szembesülni fog a megszégyenítésével. Ez olyan hatalmas lelki terhet jelenthet egy fiatal
+            számára, hogy sokszor drasztikus lakóhely- és iskolaváltás kell ahhoz, hogy túl lehessen
+            lépni egy ilyen eseményen. Sajnos azonban sokszor ez sem segít, és vannak olyan fiatalok,
+            akik inkább az öngyilkosságot választják, mert úgy érzik, örökös szégyen vár rájuk.
+            </p>
+    </section>
 
       <!-- scriptek JS -->
       <script src="./js/bootstrap.min.js"></script>
