--- a/index.html
+++ b/index.html
@@ -1,71 +1,262 @@
 <!DOCTYPE html>
 <html lang="hu">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netmentor</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white position-fixed w-100">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="./img/mini-logo.svg" />
-        </a>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="./img/mini-logo.svg" />
+            </a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBarMenu" aria-controls="navBarMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span><img src="./img/icon-menu.svg"></span>
-        </button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBarMenu"
+                aria-controls="navBarMenu" aria-expanded="false" aria-label="Toggle navigation">
+                <span><img src="./img/icon-menu.svg" /></span>
+            </button>
 
-        <div class="collapse navbar-collapse justify-content-center " id="navBarMenu">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Kezdőlap</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Rólunk</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./documentation.html">Dokumentáció</a>
-                </li>
-            </ul>
+            <div class="collapse navbar-collapse justify-content-center" id="navBarMenu">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kezdőlap</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#rolunk">Rólunk</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./documentation.html">Dokumentáció</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
 
     <header class="container-fluid">
         <div class="row position-absolute top-50 start-50 translate-middle">
-            <div class="w-100 d-block d-lg-flex justify-content-center align-items-center text-center">
+            <div class="
+            w-100
+            d-block d-lg-flex
+            justify-content-center
+            align-items-center
+            text-center
+          ">
                 <div class="p-5 text-end">
                     <h1 class="fw-bold text-uppercase">Netmentor</h1>
                     <span class="fw-normal text-secondary text-uppercase fs-5">Kezdőlap</span>
                 </div>
-                <img class="w-75" src="./img/logo.svg">
+                <img class="w-75" src="./img/logo.svg" />
             </div>
         </div>
     </header>
 
-    <section class="main">
-        <img src="./img/test.jpg">
+    <section class="main" id="bullyng">
+        <img src="./img/test.jpg" />
         <div class="container-fluid h-100 d-grid">
             <div class="row justify-content-center">
-                <div class="col-11 col-md-5 col-lg-3 border border-3 border-white text-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">Online zaklatás jellemzői</a></div>
-                <div class="col-11 col-md-6 col-lg-8 border border-3 border-white text-white text-center mt-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">Az online zaklatás szereplői</a></div>
+                <div class="
+              col-11 col-md-5 col-lg-3
+              border border-3 border-white
+              text-white text-center
+              mt-3
+              me-md-3
+              d-flex
+              align-items-center
+              justify-content-center
+            ">
+                    <a class="fw-bold text-decoration-none text-white" href="./documentation.html#online_zaklatas_jellemzoi">Online zaklatás jellemzői</a>
+                </div>
+                <div class="
+              col-11 col-md-6 col-lg-8
+              border border-3 border-white
+              text-white text-center
+              mt-3
+              d-flex
+              align-items-center
+              justify-content-center
+            ">
+                    <a class="fw-bold text-decoration-none text-white" href="#">Az online zaklatás szereplői</a>
+                </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-11 col-md-6 col-lg-7 border border-3 border-white text-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">Az online zaklatás lelki következményei</a></div>
-                <div class="col-11 col-md-5 col-lg-4 border border-3 border-white text-white text-center mt-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">Kérnek-e az áldozatok segítséget?</a></div>
+                <div class="
+              col-11 col-md-6 col-lg-7
+              border border-3 border-white
+              text-white text-center
+              mt-3
+              me-md-3
+              d-flex
+              align-items-center
+              justify-content-center
+            ">
+                    <a class="fw-bold text-decoration-none text-white" href="#">Az online zaklatás lelki
+                        következményei</a>
+                </div>
+                <div class="
+              col-11 col-md-5 col-lg-4
+              border border-3 border-white
+              text-white text-center
+              mt-3
+              d-flex
+              align-items-center
+              justify-content-center
+            ">
+                    <a class="fw-bold text-decoration-none text-white" href="#">Kérnek-e az áldozatok segítséget?</a>
+                </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-11 col-md-5 col-lg-5 border border-3 border-white text-white text-center mt-3 mb-md-3 me-md-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">A zaklatás elkerülése</a></div>
-                <div class="col-11 col-md-6 col-lg-6 border border-3 border-white text-white text-center mt-3 mb-3 d-flex align-items-center justify-content-center"><a class="fw-bold text-decoration-none text-white" href="#">Mit tehet a médiamenentor?</a></div>
+                <div class="
+              col-11 col-md-5 col-lg-5
+              border border-3 border-white
+              text-white text-center
+              mt-3
+              mb-md-3
+              me-md-3
+              d-flex
+              align-items-center
+              justify-content-center
+            ">
+                    <a class="fw-bold text-decoration-none text-white" href="#">A zaklatás elkerülése</a>
+                </div>
+                <div class="
+              col-11 col-md-6 col-lg-6
+              border border-3 border-white
+              text-white text-center
+              mt-3
+              mb-3
+              d-flex
+              align-items-center
+              justify-content-center
+            ">
+                    <a class="fw-bold text-decoration-none text-white" href="#">Mit tehet a médiamenentor?</a>
+                </div>
             </div>
         </div>
     </section>
 
+    <section id="rolunk">
+        <h2 class="text-center py-3">Rólunk</h2>
+
+        <!-- Mobil barátra -->
+
+
+        <div class="h-100">
+            <div class="row my-5">
+                <div class="col col-md-11 col-lg-9 border border-top border-end border-bottom shadow rounded">
+                    <div class="d-sm-block d-md-flex h-100">
+                        <div class="d-none  d-md-flex justify-content-center align-items-center w-25">
+                            <img class="w-75" src="./img/user.png" alt="">
+                        </div>
+
+                        <div class="d-sm-block d-md-none w-100">
+                            <img class="d-none d-sm-block w-25 position-relative start-50 translate-middle-x" src="./img/user.png" alt="">
+                            <img class="d-block d-sm-none w-50 position-relative start-50 translate-middle-x" src="./img/user.png" alt="">
+                        </div>
+
+                        <div class="d-md-none w-100 p-2">
+                            <h3 class="py-3 text-center">Gyulai Balázs</h3>
+                            <p>
+                                Lorem Ipsum has been the industry's standard dummy text ever since
+                                the 1500s, when an unknown printer took a galley of type and
+                                scrambled it to make a type specimen book. It has survived not
+                                only five centuries, but also the leap into electronic
+                                typesetting, remaining essentially unchanged. It was popularised
+                                in the 1960s with the release of Letraset sheets containing Lorem
+                                Ipsum passages, and more recently with desktop publishing software
+                                like Aldus PageMaker including versions of Lorem Ipsum.
+                            </p>
+                        </div>
+
+                        <div class="d-none d-md-block w-75 p-2">
+                            <h3 class="py-3">Gyulai Balázs</h3>
+                            <p>
+                                Lorem Ipsum has been the industry's standard dummy text ever since
+                                the 1500s, when an unknown printer took a galley of type and
+                                scrambled it to make a type specimen book. It has survived not
+                                only five centuries, but also the leap into electronic
+                                typesetting, remaining essentially unchanged. It was popularised
+                                in the 1960s with the release of Letraset sheets containing Lorem
+                                Ipsum passages, and more recently with desktop publishing software
+                                like Aldus PageMaker including versions of Lorem Ipsum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-end my-5">
+                <div class="col col-md-11 col-lg-9 border border-bottom border-start border-top shadow rounded">
+                    <div class="d-flex h-100">
+
+                        <div class="d-block d-md-none w-100">
+                            <img class="d-none d-sm-block w-50 position-relative start-50 translate-middle-x" src="./img/user.png" alt="">
+                        </div>
+
+                        <div class="d-block w-75 p-2">
+                            <h3 class="py-3">Gergácz Márk</h3>
+                            <p>
+                                Lorem Ipsum has been the industry's standard dummy text ever since
+                                the 1500s, when an unknown printer took a galley of type and
+                                scrambled it to make a type specimen book. It has survived not only
+                                five centuries, but also the leap into electronic typesetting,
+                                remaining essentially unchanged. It was popularised in the 1960s
+                                with the release of Letraset sheets containing Lorem Ipsum passages,
+                                and more recently with desktop publishing software like Aldus
+                                PageMaker including versions of Lorem Ipsum.
+                            </p>
+                        </div>
+
+                        <div class="d-block w-75 p-2">
+                            <h3 class="py-3">Gergácz Márk</h3>
+                            <p>
+                                Lorem Ipsum has been the industry's standard dummy text ever since
+                                the 1500s, when an unknown printer took a galley of type and
+                                scrambled it to make a type specimen book. It has survived not only
+                                five centuries, but also the leap into electronic typesetting,
+                                remaining essentially unchanged. It was popularised in the 1960s
+                                with the release of Letraset sheets containing Lorem Ipsum passages,
+                                and more recently with desktop publishing software like Aldus
+                                PageMaker including versions of Lorem Ipsum.
+                            </p>
+                        </div>
+                        
+                        <div class="w-25 h-100 d-flex justify-content-center align-items-center">
+                            <img class="w-75" src="./img/user.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="text-white p-5">
+        <div class="row">
+            <div class="col-md-12 col-lg-4 p-2">
+                <h4 class="fw-bold">Hasznos volt az oldal?</h4>
+                <p>Egyéb kérdés vagy információ, amit szeretnél velünk megoszteni, akkor kérlek írj nekünk!</p>
+                <p>A mi e-mail címünk: nemigazi@gmail.com</p>
+            </div>
+            <div class="col-md-12 col-lg-4 p-2">
+                <label class="fw-bold p-1">Az Ön neve?</label><br>
+                <input class="w-100 border border-2 border-white rounded text-white" type="text"><br>
+                <label class="fw-bold p-1">Az Ön e-mail címe?</label><br>
+                <input class="w-100 border border-2 border-white rounded text-white" type="email">
+            </div>
+            <div class="col-md-12 col-lg-4 p-2">
+                <label class="fw-bold p-1">Amit el szeretne mondani...</label>
+                <textarea class="w-100 h-75 border border-2 border-white rounded text-white"></textarea>
+                <button class="btn bg-white w-100">Küldés</button>
+            </div>
+        </div>
+    </footer>
+
     <!-- scriptek JS -->
     <script src="./js/bootstrap.min.js"></script>
-  </body>
+</body>
+
 </html>
