everything is ready

--- a/index.html
+++ b/index.html
@@ -56,110 +56,43 @@
         </div>
     </header>
 
+    
+
     <section class="main" id="bullyng">
         <img src="./img/test.jpg" />
         <div class="container-fluid h-100 d-grid">
             <div class="row justify-content-center">
-                <div class="
-              col-11 col-md-5 col-lg-3
-              border border-3 border-white
-              text-white text-center
-              mt-3
-              me-md-3
-              d-flex
-              align-items-center
-              justify-content-center
-            ">
-                    <a class="fw-bold text-decoration-none text-white" href="./documentation.html#online_zaklatas_jellemzoi">Online zaklatás jellemzői</a>
-                </div>
-                <div class="
-              col-11 col-md-6 col-lg-8
-              border border-3 border-white
-              text-white text-center
-              mt-3
-              d-flex
-              align-items-center
-              justify-content-center
-            ">
-                    <a class="fw-bold text-decoration-none text-white" href="#">Az online zaklatás szereplői</a>
-                </div>
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-3 border border-3 border-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center" href="./documentation.html#online_zaklatas_jellemzoi">Online zaklatás jellemzői</a>
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-8 border border-3 border-white text-white text-center mt-3 d-flex align-items-center justify-content-center" href="#">Az online zaklatás szereplői</a>
+            <div class="row justify-content-center">
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-7 border border-3 border-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center" href="#">Az online zaklatás lelki következményei</a>
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-4 border border-3 border-white text-center mt-3 d-flex align-items-center justify-content-center" href="#">Kérnek-e az áldozatok segítséget?</a>
             </div>
             <div class="row justify-content-center">
-                <div class="
-              col-11 col-md-6 col-lg-7
-              border border-3 border-white
-              text-white text-center
-              mt-3
-              me-md-3
-              d-flex
-              align-items-center
-              justify-content-center
-            ">
-                    <a class="fw-bold text-decoration-none text-white" href="#">Az online zaklatás lelki
-                        következményei</a>
-                </div>
-                <div class="
-              col-11 col-md-5 col-lg-4
-              border border-3 border-white
-              text-white text-center
-              mt-3
-              d-flex
-              align-items-center
-              justify-content-center
-            ">
-                    <a class="fw-bold text-decoration-none text-white" href="#">Kérnek-e az áldozatok segítséget?</a>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="
-              col-11 col-md-5 col-lg-5
-              border border-3 border-white
-              text-white text-center
-              mt-3
-              mb-md-3
-              me-md-3
-              d-flex
-              align-items-center
-              justify-content-center
-            ">
-                    <a class="fw-bold text-decoration-none text-white" href="#">A zaklatás elkerülése</a>
-                </div>
-                <div class="
-              col-11 col-md-6 col-lg-6
-              border border-3 border-white
-              text-white text-center
-              mt-3
-              mb-3
-              d-flex
-              align-items-center
-              justify-content-center
-            ">
-                    <a class="fw-bold text-decoration-none text-white" href="#">Mit tehet a médiamenentor?</a>
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-5 border border-3 border-white text-white text-center mt-3 mb-md-3 me-md-3 d-flex align-items-center justify-content-center" href="#">A zaklatás elkerülése</a>
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-6 border border-3 border-white text-white text-center mt-3 mb-3 d-flex align-items-center justify-content-center" href="#">Mit tehet a médiamenentor?</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="rolunk">
+    <section class="container-fluid" id="rolunk">
         <h2 class="text-center py-3">Rólunk</h2>
-
-        <!-- Mobil barátra -->
-
 
         <div class="h-100">
             <div class="row my-5">
                 <div class="col col-md-11 col-lg-9 border border-top border-end border-bottom shadow rounded">
-                    <div class="d-sm-block d-md-flex h-100">
-                        <div class="d-none  d-md-flex justify-content-center align-items-center w-25">
+                    <div class="d-block d-md-flex h-100">
+                        <div class="d-none d-md-flex justify-content-center align-items-center w-25">
                             <img class="w-75" src="./img/user.png" alt="">
                         </div>
 
-                        <div class="d-sm-block d-md-none w-100">
-                            <img class="d-none d-sm-block w-25 position-relative start-50 translate-middle-x" src="./img/user.png" alt="">
-                            <img class="d-block d-sm-none w-50 position-relative start-50 translate-middle-x" src="./img/user.png" alt="">
+                        <div class="d-flex d-md-none w-100 mt-2 justify-content-center align-items-center">
+                            <img class="d-none d-sm-block w-25" src="./img/user.png" alt="">
+                            <img class="d-block d-sm-none w-50" src="./img/user.png" alt="">
                         </div>
 
-                        <div class="d-md-none w-100 p-2">
+                        <div class="d-md-none w-100">
                             <h3 class="py-3 text-center">Gyulai Balázs</h3>
                             <p>
                                 Lorem Ipsum has been the industry's standard dummy text ever since
@@ -173,7 +106,7 @@
                             </p>
                         </div>
 
-                        <div class="d-none d-md-block w-75 p-2">
+                        <div class="d-none d-md-block w-75">
                             <h3 class="py-3">Gyulai Balázs</h3>
                             <p>
                                 Lorem Ipsum has been the industry's standard dummy text ever since
@@ -191,13 +124,28 @@
             </div>
             <div class="row justify-content-end my-5">
                 <div class="col col-md-11 col-lg-9 border border-bottom border-start border-top shadow rounded">
-                    <div class="d-flex h-100">
+                    <div class="d-block d-md-flex h-100">
+
+                        <div class="d-flex d-md-none w-100 mt-2 justify-content-center align-items-center">
+                            <img class="d-none d-sm-block w-25" src="./img/user.png" alt="">
+                            <img class="d-block d-sm-none w-50" src="./img/user.png" alt="">
+                        </div>
 
                         <div class="d-block d-md-none w-100">
-                            <img class="d-none d-sm-block w-50 position-relative start-50 translate-middle-x" src="./img/user.png" alt="">
+                            <h3 class="py-3 text-center">Gergácz Márk</h3>
+                            <p>
+                                Lorem Ipsum has been the industry's standard dummy text ever since
+                                the 1500s, when an unknown printer took a galley of type and
+                                scrambled it to make a type specimen book. It has survived not only
+                                five centuries, but also the leap into electronic typesetting,
+                                remaining essentially unchanged. It was popularised in the 1960s
+                                with the release of Letraset sheets containing Lorem Ipsum passages,
+                                and more recently with desktop publishing software like Aldus
+                                PageMaker including versions of Lorem Ipsum.
+                            </p>
                         </div>
 
-                        <div class="d-block w-75 p-2">
+                        <div class="d-none d-md-block w-75">
                             <h3 class="py-3">Gergácz Márk</h3>
                             <p>
                                 Lorem Ipsum has been the industry's standard dummy text ever since
@@ -211,21 +159,7 @@
                             </p>
                         </div>
 
-                        <div class="d-block w-75 p-2">
-                            <h3 class="py-3">Gergácz Márk</h3>
-                            <p>
-                                Lorem Ipsum has been the industry's standard dummy text ever since
-                                the 1500s, when an unknown printer took a galley of type and
-                                scrambled it to make a type specimen book. It has survived not only
-                                five centuries, but also the leap into electronic typesetting,
-                                remaining essentially unchanged. It was popularised in the 1960s
-                                with the release of Letraset sheets containing Lorem Ipsum passages,
-                                and more recently with desktop publishing software like Aldus
-                                PageMaker including versions of Lorem Ipsum.
-                            </p>
-                        </div>
-                        
-                        <div class="w-25 h-100 d-flex justify-content-center align-items-center">
+                        <div class="d-none w-25 h-100 d-md-flex justify-content-center align-items-center">
                             <img class="w-75" src="./img/user.png" alt="">
                         </div>
                     </div>
@@ -235,25 +169,27 @@
     </section>
 
     <footer class="text-white p-5">
-        <div class="row">
-            <div class="col-md-12 col-lg-4 p-2">
-                <h4 class="fw-bold">Hasznos volt az oldal?</h4>
-                <p>Egyéb kérdés vagy információ, amit szeretnél velünk megoszteni, akkor kérlek írj nekünk!</p>
-                <p>A mi e-mail címünk: nemigazi@gmail.com</p>
+        <form>
+            <div class="row">
+                <div class="col-md-12 col-lg-4 p-2">
+                    <h4 class="fw-bold">Hasznos volt az oldal?</h4>
+                    <p>Egyéb kérdés vagy információ, amit szeretnél velünk megoszteni, akkor kérlek írj nekünk!</p>
+                    <p>A mi e-mail címünk: <span class="fst-italic">nemigazi@gmail.com</span></p>
+                </div>
+                <div class="col-md-12 col-lg-4 p-2">
+                    <label class="fw-bold p-1">Az Ön neve?</label><br>
+                    <input class="w-100 border border-2 border-white rounded text-white" type="text"><br>
+                    <label class="fw-bold p-1">Az Ön e-mail címe?</label><br>
+                    <input class="w-100 border border-2 border-white rounded text-white" type="email">
+                </div>
+                <div class="col-md-12 col-lg-4 p-2">
+                    <label class="fw-bold p-1">Amit el szeretne mondani...</label>
+                    <textarea class="w-100 h-75 border border-2 border-white rounded text-white"></textarea>
+                    <button class="btn bg-white w-100">Küldés</button>
+                </div>
             </div>
-            <div class="col-md-12 col-lg-4 p-2">
-                <label class="fw-bold p-1">Az Ön neve?</label><br>
-                <input class="w-100 border border-2 border-white rounded text-white" type="text"><br>
-                <label class="fw-bold p-1">Az Ön e-mail címe?</label><br>
-                <input class="w-100 border border-2 border-white rounded text-white" type="email">
-            </div>
-            <div class="col-md-12 col-lg-4 p-2">
-                <label class="fw-bold p-1">Amit el szeretne mondani...</label>
-                <textarea class="w-100 h-75 border border-2 border-white rounded text-white"></textarea>
-                <button class="btn bg-white w-100">Küldés</button>
-            </div>
-        </div>
-    </footer>
+        </form>
+        </footer>
 
     <!-- scriptek JS -->
     <script src="./js/bootstrap.min.js"></script>
