pictures are changed

--- a/index.html
+++ b/index.html
@@ -56,22 +56,21 @@
         </div>
     </header>
 
-    
-
     <section class="main" id="bullyng">
         <img src="./img/test.jpg" />
         <div class="container-fluid h-100 d-grid">
             <div class="row justify-content-center">
-                <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-3 border border-3 border-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center" href="./documentation.html#online_zaklatas_jellemzoi">Online zaklatás jellemzői</a>
-                <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-8 border border-3 border-white text-white text-center mt-3 d-flex align-items-center justify-content-center" href="#">Az online zaklatás szereplői</a>
-            <div class="row justify-content-center">
-                <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-7 border border-3 border-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center" href="#">Az online zaklatás lelki következményei</a>
-                <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-4 border border-3 border-white text-center mt-3 d-flex align-items-center justify-content-center" href="#">Kérnek-e az áldozatok segítséget?</a>
+                    <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-3 border border-3 border-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center" href="./documentation.html#online_zaklatas_jellemzoi">Online zaklatás jellemzői</a>
+                    <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-8 border border-3 border-white text-center mt-3 d-flex align-items-center justify-content-center" href="#">Az online zaklatás szereplői</a>
             </div>
             <div class="row justify-content-center">
-                <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-5 border border-3 border-white text-white text-center mt-3 mb-md-3 me-md-3 d-flex align-items-center justify-content-center" href="#">A zaklatás elkerülése</a>
-                <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-6 border border-3 border-white text-white text-center mt-3 mb-3 d-flex align-items-center justify-content-center" href="#">Mit tehet a médiamenentor?</a>
-                </div>
+                    <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-7 border border-3 border-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center" href="#">Az online zaklatás lelki
+                        következményei</a>
+                    <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-4 border border-3 border-white text-center mt-3 d-flex align-items-center justify-content-center" href="#">Kérnek-e az áldozatok segítséget?</a>
+            </div>
+            <div class="row justify-content-center">
+                    <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-5 border border-3 border-white text-center mt-3 mb-md-3 me-md-3 d-flex align-items-center justify-content-center" href="#">A zaklatás elkerülése</a>
+                    <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-6 border border-3 border-white text-white text-center mt-3 mb-3 d-flex align-items-center justify-content-center" href="#">Mit tehet a médiamenentor?</a>
             </div>
         </div>
     </section>
@@ -84,12 +83,12 @@
                 <div class="col col-md-11 col-lg-9 border border-top border-end border-bottom shadow rounded">
                     <div class="d-block d-md-flex h-100">
                         <div class="d-none d-md-flex justify-content-center align-items-center w-25">
-                            <img class="w-75" src="./img/user.png" alt="">
+                            <img class="w-75" src="./img/balazs.png" alt="Kép Gyulai Balázsról">
                         </div>
 
                         <div class="d-flex d-md-none w-100 mt-2 justify-content-center align-items-center">
-                            <img class="d-none d-sm-block w-25" src="./img/user.png" alt="">
-                            <img class="d-block d-sm-none w-50" src="./img/user.png" alt="">
+                            <img class="d-none d-sm-block w-25 rounded" src="./img/balazs.png" alt="Kép Gyulai Balázsról">
+                            <img class="d-block d-sm-none w-50 rounded" src="./img/balazs.png" alt="Kép Gyulai Balázsról">
                         </div>
 
                         <div class="d-md-none w-100">
@@ -127,8 +126,8 @@
                     <div class="d-block d-md-flex h-100">
 
                         <div class="d-flex d-md-none w-100 mt-2 justify-content-center align-items-center">
-                            <img class="d-none d-sm-block w-25" src="./img/user.png" alt="">
-                            <img class="d-block d-sm-none w-50" src="./img/user.png" alt="">
+                            <img class="d-none d-sm-block w-25 rounded" src="./img/mark.png" alt="">
+                            <img class="d-block d-sm-none w-50 rounded" src="./img/mark.png" alt="">
                         </div>
 
                         <div class="d-block d-md-none w-100">
@@ -160,7 +159,7 @@
                         </div>
 
                         <div class="d-none w-25 h-100 d-md-flex justify-content-center align-items-center">
-                            <img class="w-75" src="./img/user.png" alt="">
+                            <img class="w-75" src="./img/mark.png" alt="">
                         </div>
                     </div>
                 </div>
