Wrote about myself

--- a/index.html
+++ b/index.html
@@ -94,28 +94,14 @@
                         <div class="d-md-none w-100">
                             <h3 class="py-3 text-center">Gyulai Balázs</h3>
                             <p>
-                                Lorem Ipsum has been the industry's standard dummy text ever since
-                                the 1500s, when an unknown printer took a galley of type and
-                                scrambled it to make a type specimen book. It has survived not
-                                only five centuries, but also the leap into electronic
-                                typesetting, remaining essentially unchanged. It was popularised
-                                in the 1960s with the release of Letraset sheets containing Lorem
-                                Ipsum passages, and more recently with desktop publishing software
-                                like Aldus PageMaker including versions of Lorem Ipsum.
+                                Gyulai Balázs vagyok eg
                             </p>
                         </div>
 
                         <div class="d-none d-md-block w-75">
                             <h3 class="py-3">Gyulai Balázs</h3>
                             <p>
-                                Lorem Ipsum has been the industry's standard dummy text ever since
-                                the 1500s, when an unknown printer took a galley of type and
-                                scrambled it to make a type specimen book. It has survived not
-                                only five centuries, but also the leap into electronic
-                                typesetting, remaining essentially unchanged. It was popularised
-                                in the 1960s with the release of Letraset sheets containing Lorem
-                                Ipsum passages, and more recently with desktop publishing software
-                                like Aldus PageMaker including versions of Lorem Ipsum.
+                                Gyulai Balázs vagyok egy a sok diák közül, aki részt vett a Netmentor képzésen. Ezen a képzésen elmondták nekünk részletesen az internetes világ jó és rossz oldalát. Mi ezt a weboldalt azért hoztuk létre, hogy egy kis betekintést nyújtsunk Önöknek az online zaklatás témakörbe, amit a tréningen osztottak meg velünk és reméljük, hogy a jövőben kevesebb lesz az ilyen eset.
                             </p>
                         </div>
                     </div>
