--- a/index.html
+++ b/index.html
@@ -60,17 +60,23 @@
         <img src="./img/test.jpg" />
         <div class="container-fluid h-100 d-grid">
             <div class="row justify-content-center">
-                    <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-3 border border-3 border-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center" href="./documentation.html#online_zaklatas_jellemzoi">Online zaklatás jellemzői</a>
-                    <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-8 border border-3 border-white text-center mt-3 d-flex align-items-center justify-content-center" href="#">Az online zaklatás szereplői</a>
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-3 border border-3 border-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center"
+                    href="./documentation.html#online_zaklatas_jellemzoi">Online zaklatás jellemzői</a>
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-8 border border-3 border-white text-center mt-3 d-flex align-items-center justify-content-center"
+                    href="./documentation.html#online_zaklatas_szereploi">Az online zaklatás szereplői</a>
             </div>
             <div class="row justify-content-center">
-                    <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-7 border border-3 border-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center" href="#">Az online zaklatás lelki
-                        következményei</a>
-                    <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-4 border border-3 border-white text-center mt-3 d-flex align-items-center justify-content-center" href="#">Kérnek-e az áldozatok segítséget?</a>
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-7 border border-3 border-white text-center mt-3 me-md-3 d-flex align-items-center justify-content-center"
+                    href="./documentation.html#online_zaklatas_lelki_kovetkezmenyei">Az online zaklatás lelki
+                    következményei</a>
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-4 border border-3 border-white text-center mt-3 d-flex align-items-center justify-content-center"
+                    href="./documentation.html#kernek_e_az_aldozatok_segitseget">Kérnek-e az áldozatok segítséget?</a>
             </div>
             <div class="row justify-content-center">
-                    <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-5 border border-3 border-white text-center mt-3 mb-md-3 me-md-3 d-flex align-items-center justify-content-center" href="#">A zaklatás elkerülése</a>
-                    <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-6 border border-3 border-white text-white text-center mt-3 mb-3 d-flex align-items-center justify-content-center" href="#">Mit tehet a médiamenentor?</a>
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-5 col-lg-5 border border-3 border-white text-center mt-3 mb-md-3 me-md-3 d-flex align-items-center justify-content-center"
+                    href="./documentation.html#a_zaklatas_elkerulese">A zaklatás elkerülése</a>
+                <a class="fw-bold text-decoration-none text-white col-11 col-md-6 col-lg-6 border border-3 border-white text-white text-center mt-3 mb-3 d-flex align-items-center justify-content-center"
+                    href="./documentation.html#mit_tehet_a_mediamentor">Mit tehet a médiamenentor?</a>
             </div>
         </div>
     </section>
@@ -83,7 +89,7 @@
                 <div class="col col-md-11 col-lg-9 border border-top border-end border-bottom shadow rounded">
                     <div class="d-block d-md-flex h-100">
                         <div class="d-none d-md-flex justify-content-center align-items-center w-25">
-                            <img class="w-75" src="./img/balazs.png" alt="Kép Gyulai Balázsról">
+                            <img class="w-75 rounded" src="./img/balazs.png" alt="Kép Gyulai Balázsról">
                         </div>
 
                         <div class="d-flex d-md-none w-100 mt-2 justify-content-center align-items-center">
@@ -94,7 +100,7 @@
                         <div class="d-md-none w-100">
                             <h3 class="py-3 text-center">Gyulai Balázs</h3>
                             <p>
-                                Gyulai Balázs vagyok eg
+                                Gyulai Balázs vagyok egy a sok diák közül, aki részt vett a Netmentor képzésen. Ezen a képzésen elmondták nekünk részletesen az internetes világ jó és rossz oldalát. Mi ezt a weboldalt azért hoztuk létre, hogy egy kis betekintést nyújtsunk Önöknek az online zaklatás témakörbe, amit a tréningen osztottak meg velünk és reméljük, hogy a jövőben kevesebb lesz az ilyen eset.
                             </p>
                         </div>
 
@@ -119,33 +125,27 @@
                         <div class="d-block d-md-none w-100">
                             <h3 class="py-3 text-center">Gergácz Márk</h3>
                             <p>
-                                Lorem Ipsum has been the industry's standard dummy text ever since
-                                the 1500s, when an unknown printer took a galley of type and
-                                scrambled it to make a type specimen book. It has survived not only
-                                five centuries, but also the leap into electronic typesetting,
-                                remaining essentially unchanged. It was popularised in the 1960s
-                                with the release of Letraset sheets containing Lorem Ipsum passages,
-                                and more recently with desktop publishing software like Aldus
-                                PageMaker including versions of Lorem Ipsum.
+                                Üdvözlöm Önöket a weboldalunkon! Én Gergácz Márk vagyok, a Handler Nándor Technikumban
+                                tanulok. Részt vettem a Netmentor képzésen. Amit a weboldalon lehet látni, az a
+                                Cyberbullying téma, vagyis az internetes zaklatás. Amit a képzésen kaptunk azt meg
+                                szeretnénk osztani Önökkel, mert úgy gondoljuk ha mindenkinek van tudomása erről a
+                                témáról, akkor kevesebb lesz az ilyen internetes zaklatás ha belegondolnak.
                             </p>
                         </div>
 
                         <div class="d-none d-md-block w-75">
                             <h3 class="py-3">Gergácz Márk</h3>
                             <p>
-                                Lorem Ipsum has been the industry's standard dummy text ever since
-                                the 1500s, when an unknown printer took a galley of type and
-                                scrambled it to make a type specimen book. It has survived not only
-                                five centuries, but also the leap into electronic typesetting,
-                                remaining essentially unchanged. It was popularised in the 1960s
-                                with the release of Letraset sheets containing Lorem Ipsum passages,
-                                and more recently with desktop publishing software like Aldus
-                                PageMaker including versions of Lorem Ipsum.
+                                Üdvözlöm Önöket a weboldalunkon! Én Gergácz Márk vagyok, a Handler Nándor Technikumban
+                                tanulok. Részt vettem a Netmentor képzésen. Amit a weboldalon lehet látni, az a
+                                Cyberbullying téma, vagyis az internetes zaklatás. Amit a képzésen kaptunk azt meg
+                                szeretnénk osztani Önökkel, mert úgy gondoljuk ha mindenkinek van tudomása erről a
+                                témáról, akkor kevesebb lesz az ilyen internetes zaklatás ha belegondolnak.
                             </p>
                         </div>
 
                         <div class="d-none w-25 h-100 d-md-flex justify-content-center align-items-center">
-                            <img class="w-75" src="./img/mark.png" alt="">
+                            <img class="w-75 rounded" src="./img/mark.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                 </div>
             </div>
         </form>
-        </footer>
+    </footer>
 
     <!-- scriptek JS -->
     <script src="./js/bootstrap.min.js"></script>
