--- a/documentation.html
+++ b/documentation.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white position-fixed w-100">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="#">
                 <img src="./img/mini-logo.svg" />
             </a>
 
